--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,1 +1,5 @@
 <%# add navigation links to this file %>
+<li><%= link_to "Home", root_path %></li>
+<li><%= link_to "Blog", root_path %></li>
+<li><%= link_to "Contact", root_path %></li>
+<li><%= link_to "About", root_path %></li>
